# SimpleXlsxReader

./: .clang-format  .clang-format.txt  .clang-tidy  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  csv2.hpp  test.cpp
_2Fe_2Fcpp_2FsimpleTableReader__master/: data.shada  data.vim
docs/: structure.txt
src/: Exceptions.h  ResourceManager.h  XlsCell.h  reader.h  strategy.h  type.h  utils.h
test/: CMakeLists.txt  CellfuncTest.cpp  isEmptyTest.cpp  parseAddrTest.cpp  test.txt  testStringViewUtils.cpp  toLowerTest.cpp  utilsTest.cpp  xlsCellTest.cpp
test/gmock/: gmock-cardinalities.h  gmock-matchers.h  gmock-spec-builders.h
test/gmock/internal/: gmock-internal-utils.h  gmock-port.h
test/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
test/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
test/gtest/internal/custom/: README.md
